--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
 body {
   font-family: sans-serif;
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  height: 60;
+  line-height: 60px;
+  background-color: grey;
+  width: 100%;
 }
