--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  margin-bottom: 60px;
+  margin-bottom: 10rem;
   line-height: 1.5;
 }
 
@@ -11,8 +11,8 @@ footer {
 .footer {
   position: absolute;
   bottom: 0;
-  height: 60;
-  line-height: 60px;
+  height: 10rem;
+  line-height: 3rem;
   background-color: grey;
   width: 100%;
 }
