--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,16 @@
+html,
+body {
+  scale: 100%;
+  margin: 0px;
+}
+
 body {
   font-family: sans-serif;
-  margin-bottom: 10rem;
+  padding-bottom: 150px;
   line-height: 1.5;
+  min-height: 100%;
+  position: relative;
+  margin: 0px;
 }
 
 footer {
@@ -10,8 +19,8 @@ footer {
 
 .footer {
   position: absolute;
-  bottom: 0;
-  height: 10rem;
+  bottom: 0px;
+  height: 150px;
   line-height: 3rem;
   background-color: grey;
   width: 100%;
